# Web-Novel-Downloader

./: .gitignore  MANIFEST.in  README.md  build_macos.spec  build_win.spec  pyproject.toml  setup.py
configs/: example.json
docs/: PROJECT_STRUCTURE.md  QUICK_START.md  USAGE_GUIDE.md
scripts/: __init__.py  book_downloader.py  scraper.py
spec/: development-progress.md
spec/develop-logs/: 2025-09-02-chapter-storage-system.md  2025-09-02-content-filtering-system.md  2025-09-02-enhanced-download-command.md  2025-09-02-novel-download-project.md  2025-09-02-scrape-book-content.md  2025-09-27-chapter-list-pagination-support.md  2025-09-27-chapter-pagination-support.md  2025-09-27-chapter-replace-command.md  2025-09-29-build-version-support.md  2025-09-29-docs-update.md  2025-09-29-executable-build-system.md  2025-09-29-package-name-change.md  2025-09-29-readme-reorganization.md  2025-10-09-chapter-organization-by-metadata-hash.md  2025-10-09-metadata-file-parameter.md  2025-10-09-remove-download-command-parameters.md  2025-10-09-remove-parse-string-replacements-parameter.md  2025-10-11-configuration-system-design.md  2025-10-11-configuration-system-implementation.md  2025-10-11-final-system-summary.md  2025-10-11-headless-browser-parameter.md  2025-10-11-parse-hash-parameter.md
src/book_downloader/: __init__.py  cli.py  config.py  config_manager.py  config_validator.py  core.py  epub_generator.py  metadata.py  scraper.py  task_executor.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_utils.py
